# ColorPickerOpenGL

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ColorPicker.sln  ColorPicker.vcxproj  ColorPicker.vcxproj.filters  LICENSE  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  imgui.ini
ColorPicker/Debug/: ColorPicker.exe.recipe
ColorPicker/Debug/ColorPicker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ColorPicker.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: Application.cpp  main.cpp
src/LoggingLibrary/: AsciiColor.cpp  Logging.cpp
src/includes/: Application.h  Logging.h
src/shaders/: fragment.glsl
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
